--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-hola mundo
+<!DOCTYPE html>
+<html lang="es">
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">  
+  
+	<title>Mapa básico con Leaflet</title>  
+	<link rel="stylesheet" href="css/leaflet.css"/>
+	<link rel="stylesheet" href="css/mapa.css"/>
+	<script src="js/leaflet.js"></script>
+</head>
+<body>
+	<div id="mi-mapa"></div>
+	<script src="js/visor.js"></script>
+</body>
+</html>
